--- a/Project/Homepage.html
+++ b/Project/Homepage.html
@@ -9,30 +9,23 @@
 
 <body>
 
-    <header>
-    <div style="width: 60%;">  
+    <header>  
+    <div class="First_part_header">
         <h1>Полюби себе - навчись танцювати!</h1>
-        <div id="menu">
-            <div class="dropdown">
-                <button onclick="toggleDropdown()" id="Menu_button">Menu</button>
-                <div id="dropdownContent">
-                    <a href="#">Home page</a>
-                    <a href="#">Recommendations</a>
-                    <a href="#">My video</a>
-                </div>
-            </div>
-            <!-- <ul class="menu">
-                <li><a href="#home" class="active">Home page</a></li>
-                <li><a href="#home">Recommendations</a></li>
-                <li><a href="#home">My video</a></li>
-            </ul> -->
-        </div>
-    </div>
 
         <form class = "Search_form">
             <input id="Search_field" type="text" name = "Search">
             <input id = "Search_button" type="submit" value="Пошук"name="Search_button">
         </form>
+    </div>
+
+    <div id="menu">
+         <ul class="menu">
+            <li><a href="#home" class="active">Home page</a></li>
+            <li><a href="#home">Recommendations</a></li>
+            <li><a href="#home">My video</a></li>
+        </ul> 
+    </div>
     </header>
 
     <section class="content">
