--- a/Project/Homepage1.html
+++ b/Project/Homepage1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" type="text/css" href="Homepage.css">
+    <link rel="stylesheet" type="text/css" href="Homepage1.css">
 </head>
 
 <body>
