--- a/Project/Homepage.html
+++ b/Project/Homepage.html
@@ -21,7 +21,7 @@
 
     <div id="menu">
          <ul class="menu">
-            <li><a href="#home" class="active">Home page</a></li>
+            <li><a href="#home">Home page</a></li>
             <li><a href="#home">Recommendations</a></li>
             <li><a href="#home">My video</a></li>
         </ul> 
