--- a/descriptions/description3.html
+++ b/descriptions/description3.html
@@ -99,7 +99,7 @@
                 break;
 
                 case 8:
-                newText = " <strong>Завдання №3</strong><br><br>    <p>              <img src='images/Screenshot_93.png', alt='Фото коду' width='420px'><br>        <img src='images/Screenshot_94.png', alt='Фото коду' width='420px'><br><br>        <a href='../ЛР3__Ларiна_IС-22/FLEXBOX/flexbox.html'>Місце розташування проекту</a>    </p>";
+                newText = " <strong>Завдання №3</strong><br><br>    <p>              <img src='images/Screenshot_93.png', alt='Фото коду' width='420px'><br>        <img src='images/Screenshot_94.png', alt='Фото коду' width='420px'><br><br>        <a href='../ЛР3/FLEXBOX/flexbox.html'>Місце розташування проекту</a>    </p>";
                 break;
 
                 case 9:
